# awesome_controller

./: .gitmodules  BluetoothUsbHostHandler.cpp  BluetoothUsbHostHandler.h  CMakeLists.txt  Max3421e.cpp  Max3421e.h  README.md  Rakefile  TODO.md  Usb.cpp  WiiController.cpp  WiiController.h  WiiRemote.cpp  WiiRemote.h  awesome_controller.ino  awesome_controller.pde  n64.cpp  n64.h  nes.cpp  nes.h  ps3_usb.cpp  ps3_usb.h  rn42listpairs.py
awesome_controller/: BluetoothUsbHostHandler.cpp  BluetoothUsbHostHandler.h  CMakeLists.txt  Max3421e.cpp  Max3421e.h  Max3421e_constants.h  Usb.cpp  Usb.h  WiiController.cpp  WiiController.h  awesome_controller.cpp  awesome_controller.ino  ch9.h  defs.h  n64.cpp  n64.h  ps3_usb.cpp  ps3_usb.h
awesome_controller/BluetoothUsbHostHandler/: BluetoothUsbHostHandler.cpp  BluetoothUsbHostHandler.h
awesome_controller/Usb/: Usb.cpp
awesome_controller/n64/: n64.cpp  n64.h
bluesmirf_testing/: bluesmirf_testing.ino
eagle_schematic/: awecont_shield_schematic.b#1  awecont_shield_schematic.pro  awecont_shield_schematic.s#1  awecont_shield_schematic.s#5  eagle.epf
eagle_schematic_combined/: UHS_20.brd  USBhostShield.b##  USBhostShield.sch
eagle_schematic_shield/: awecont_shield_schematic.b#2  awecont_shield_schematic.b#6  awecont_shield_schematic.b#7  awecont_shield_schematic.brd  awecont_shield_schematic.pro  awecont_shield_schematic.s#1  awecont_shield_schematic.s#4  awecont_shield_schematic.s#5  awecont_shield_schematic.sch  eagle.epf
snes_send_data/: snes_send_data.pde
tests/: smoke_test.rb  test_helper.rb
(+12 files in other folders)
